fixed grid css and botom nav alignment next add project link to image viewer

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
   width: 60vw;
   margin: 0 auto;
   position: relative;
-  padding:0 5%;
+ 
 }
 
 
